5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1859_2218.log
== TEST (2019-06-26 14:20:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:25:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(m):
	a = (i**2 - i)/2
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:25:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in m:
	a = (i**2 - i)/2
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:26:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in m:
	a = (i**2 - i)/2
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:49:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j)
		j = j + m[i,j]
print(round(j, 2))
-- ERROR:
File "XXXX", line 6
    if(i!=j)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:49:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = j + m[i,j]
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:50:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = j + m[i,j]
print(round(j, 2))
-- EXECUTION TIME:
1.24738
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
2
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
2
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:51:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = (j**2 - i)/2
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:51:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = (i**2 - j)/2
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:52:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = (i**2 - j)/2
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:52:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = (i**2 - j)/2[i,j]
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:53:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = j + m[i,j]
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:53:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			j = j + m
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:53:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = (i**2 - j) /2
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:54:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = (i**2 - j) /2
	print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:54:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = (i**2 - j) /2
			print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:54:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = (i**2 - j) /2
print(round(j, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:55:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = s + m 
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:55:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = s + m[i,j]
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:56:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = (s**2 - m)/2[i,j]
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:56:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = (s**2 - m)[i,j]
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:57:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			s = s + m[i,j]
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:57:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i<j):
			s = s + m[i,j]
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:58:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matriz:")))
s = 0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i<j):
			s = s + m[i,j]
print(round(s, 2))
-- EXECUTION TIME:
1.0556
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
590.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
